--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -39,11 +39,11 @@
         <h5>Capítulo 4</h5>
         <h1>10 personajes entrañables</h1>
         <p class="interior-capitular">
-            Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborisaliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            ¿Qué define a un personaje de Mario Vargas Llosa? ¿Es su actitud frente al mundo? ¿Su manera de hablar? ¿El humor con el que están escritos? Tal vez todo eso en justa medida. Desde el lanzamiento de su primera novela, describir a un personaje como ‘vargasllosiano’ es dotarlo de un aura que lo distingue de los demás. Incluso si un personaje no ha sido escrito por Vargas Llosa, puede ser considerado ‘vargasllosiano’. Imitadores no le han faltado en tantas décadas.
         </p>  
         <span class="separador"></span>      
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            "Lo característico de una novela es que al final el escritor no puede discernir entre aquello que procede exclusivamente de la imaginación y lo que [viene de la] memoria. Y eso es porque en el proceso de escribir ambas cosas se van fundiendo hasta formar algo completamente distinto", contó el escritor a el Comercio en 1987. Porque incluso gente real se convirtió en sus personajes; el escritor tomó momentos de sus vidas y los noveló, sea gente que conoció en persona o a sujetos históricos. Esta lista tiene un poco de ambas cosas.
         </p>
     </div>
 
