--- a/capitulo-5/index.html
+++ b/capitulo-5/index.html
@@ -37,7 +37,7 @@
 
     <div class="header-interior header-interior-capitulo-5">
         <h5>Capítulo 5</h5>
-        <h1>reseñas textos largos</h1>
+        <h1>La vida política de Mario Vargas Llosa</h1>
         <p class="interior-capitular">
             La vida política del Nobel de literatura tuvo de todo. Según relató él mismo en su autobiografía, fue nieto de un prefecto, alguna vez organizó una huelga en su colegio y militó en una cédula comunista durante sus años universitarios. Luego, fue escritor de discursos para un candidato, trabajador del Congreso y, en más de una ocasión, le ofrecieron ser ministro de Estado. En lo ideológico, pasó de ser simpatizante a opositor del socialismo, hasta establecerse como
         </p>  
