--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -36,13 +36,13 @@
     </nav>
 
     <div class="header-interior header-interior-capitulo-9">
-        <h5>Capítulo 9</h5>
-        <h1>cronología de obras y premios</h1>
-        <h3>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT, SED DO EIUSMOD TEMPOR INCIDIDUNT.</h3>    
+        <h5>Capítulo 8</h5>
+        <h1>en cada esquina de sus letras</h1>
+        <h3>LAS CIFRAS Y LUGARES DE SU UNIVERSO LITERARIO DE MARIO VARGAS LLOSA</h3>    
     </div>    
 
     <p class="bajada-cronologia">
-        L orem nim ad minim veniam, quis nostrud exercitation ullamco laborisaliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+        Explora las cifras de la creación literaria del inmortal escritor y recorre, de manera interactiva, cada rincón del mundo que habitan las historias de sus novelas más célebres.
     </p> 
 
     <span class="selecciona">
