--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -37,7 +37,7 @@
 
     <div class="header-interior">
         <h5>Capítulo 1</h5>
-        <h1>su vida en las páginas de el comercio</h1>
+        <h1>chatbot</h1>
         <p class="interior-capitular">
             Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborisaliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         </p>  
@@ -47,6 +47,7 @@
         </p>
     </div>
 
+    <!--
     <div class="main-timeline">
         <div class="timeline">
             <ul>
@@ -114,6 +115,7 @@
             </ul>
         </div>
     </div>
+    -->
 
     <script>        
         document.querySelector('.inicio').addEventListener('click', function() {            
