--- a/capitulo-7/index.html
+++ b/capitulo-7/index.html
@@ -90,6 +90,80 @@
     <p class="texto-nobel">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </p>
+
+    <div class="box-footer">
+        <img src="https://nuevasnarrativasec.github.io/edificio-comercio-centenario/img/logo-comercio.png" alt="" width="100%">
+        <ul>
+            <li>
+                <p>
+                    <span>Redacción:</span>
+                    Alfonso Rivadeneyra, Enrique Planas, Víctor Reyes, Equipo ECData
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Edición:</span>
+                    Alfonso Rivadeneyra
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Material visual y Piedra de toque:</span>
+                    Archivo histórico El Comercio
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Diseño:</span>
+                    Marcelo Hidalgo
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Ilustraciones y animación:</span>
+                    Kiomy Kanashiro
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Programación:</span>
+                    Armando Scargglioni C.
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Desarrollo de Chatbot:</span>
+                    Brillitt Arellan
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Edición visual:</span>
+                    Angela Peña
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Producción general:</span>
+                    Gisella Salmón
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Director periodístico:</span>
+                    Juan Aurelio Arévalo
+                </p>
+            </li>
+            <li>
+                <p>
+                    <span>Agradecimientos:</span>
+                    Alexander Quispe
+                    <br>
+                    Rodrigo Grijalba
+                </p>
+            </li>
+        </ul>
+    </div>
     
     
 
