--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -45,6 +45,67 @@
         Explora las cifras de la creación literaria del inmortal escritor y recorre, de manera interactiva, cada rincón del mundo que habitan las historias de sus novelas más célebres.
     </p> 
 
+    <ul class="premios">
+        <li>
+            <img src="../img/premio-01.png" alt="" width="100%">
+            <h5>
+                83
+                <span>Premios*</span>
+            </h5>
+        </li>
+        <div class="separador-premios"></div>
+        <li>
+            <img src="../img/premio-02.png" alt="" width="100%">
+            <h5>
+                71
+                <span>Distinciones honoris causa</span>
+            </h5>
+        </li>
+        <div class="separador-premios"></div>
+        <li>
+            <img src="../img/premio-03.png" alt="" width="100%">
+            <h5>
+                51
+                <span>Obras publicadas*</span>
+            </h5>
+        </li>
+        <div class="separador-premios"></div>
+        <li>
+            <img src="../img/premio-04.png" alt="" width="100%">
+            <h5>
+                30
+                <span>Idiomas en los que se han traducido sus libros</span>
+            </h5>
+        </li>
+        <div class="separador-premios"></div>
+        <li>
+            <img src="../img/premio-05.png" alt="" width="100%">
+            <h5>
+                15
+                <span>Obras llevadas al cine, tv y teatro</span>
+            </h5>
+        </li>
+    </ul>
+
+    <p class="descripcion-premios">
+        *No incluye menciones honoríficas, puestos finalistas o segundos lugares
+    </p>
+    <p class="descripcion-premios">
+        **Se contabilizan solo los siguientes formatos: 20 novelas, 6 cuentos, 14 ensayos, 1 libro de memorias y 10 obras teatrales.
+    </p>
+
+    <p class="texto-premios">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+
+    <div class="box-iframe">
+        <h4>El mundo de Vargas Llosa</h4>
+        <p>Los distritos, ciudades y países en los que transcurrieron las historias de sus novelas más célebres, según la crítica.</p>
+        <iframe title="" aria-label="Mapa" id="datawrapper-chart-Xbzp9" src="https://datawrapper.dwcdn.net/Xbzp9/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="294" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+        </script>
+    </div>
+    
+
     <span class="selecciona">
         Selecciona una década
     </span>
