--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -37,7 +37,7 @@
 
     <div class="header-interior header-interior-capitulo-9">
         <h5>Capítulo 8</h5>
-        <h1>en cada esquina de sus letras</h1>
+        <h1>en cada esquina de sus letras:</h1>
         <h3>LAS CIFRAS Y LUGARES DE SU UNIVERSO LITERARIO DE MARIO VARGAS LLOSA</h3>    
     </div>    
 
@@ -104,6 +104,10 @@
         <iframe title="" aria-label="Mapa" id="datawrapper-chart-Xbzp9" src="https://datawrapper.dwcdn.net/Xbzp9/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="294" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
     </div>
+
+    <span class="separador-seccion"></span>
+    <h4 class="seccion">obras y recomendaciones</h4>
+    <span class="separador-seccion"></span>
     
 
     <span class="selecciona">
@@ -137,62 +141,60 @@
         </li>
     </ul>
 
+    <p class="sumilla">
+        Revisa las obras literarias que marcaron cada década, así como los premios y reconocimientos obtenidos a lo largo del tiempo.
+    </p>
+
     <div class="box-timeline">
-        <h4 style="margin-bottom: 40px;" id="decada-1">
+        <h4 id="decada-1">
             1950 - 1960
         </h4>
 
-        <h5 class="year" id="year-1">
-            1952
-        </h5>
-        <img src="../img/lapiz.png" alt="" width="100%" class="lapiz">
-        <div class="box-item-timeline">
-            <div class="box-texto-obra">
-                <h5>Obra teatral</h5>
-                <h6>La huida del Inca</h6>
-            </div>
+        <div class="box-titulo-secciones">
+            <h6>Obra literaria</h6>
+            <h6>Premios y reconocimientos</h6>
         </div>
-        <div class="box-item-timeline item-derecha">
-            <div class="box-texto-obra">
-                <h5>Segundo lugar</h5>
-                <p>Segundo premio del III Concurso de Teatro Escolar y Radioteatro Infantil del Ministerio de Educación Pública por su obra de teatro no publicada La huida del Inca</p>
+
+        <div class="box-columna-izq">
+            <div class="box-item-timeline margin-bottom-112">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1952</h4>
+                    <h5>Obra teatral</h5>
+                    <h6>La huida del Inca</h6>
+                </div>
+            </div>
+            <div class="box-item-timeline">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1959</h4>
+                    <h5>Cuento/Relato</h5>
+                    <h6>Los jefes</h6>
+                </div>
             </div>
         </div>
 
-        <div class="clear"></div>
-
-        <h5 class="year">
-            1957
-        </h5>
-        <div class="box-item-timeline opacity">
+        <div class="box-columna-der">
             <div class="box-texto-obra">
-                <h5>Obra teatral</h5>
-                <h6>La huida del Inca</h6>
+                <h4>1952</h4>
+                <h5>(Segundo lugar)</h5>
+                <h6>Segundo premio del III Concurso de Teatro Escolar y Radioteatro Infantil del Ministerio de Educación Pública por su obra de teatro no publicada La huida del Inca</h6>
             </div>
-        </div>
-        <div class="box-item-timeline item-derecha">
+
             <div class="box-texto-obra">
+                <h4>1957</h4>
                 <h5>Premio/Primer lugar</h5>
-                <p>Premio de la Revue Française por su relato 'El desafío'.</p>
+                <h6>Premio de la Revue Française por su relato El desafío</h6>
             </div>
-        </div>
 
-        <div class="clear"></div>
-
-        <h5 class="year">
-            1959
-        </h5>
-        <div class="box-item-timeline">
-            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
             <div class="box-texto-obra">
-                <h5>Cuento/Relato</h5>
-                <h6>Los jefes</h6>
-            </div>
-        </div>
-        <div class="box-item-timeline item-derecha">
-            <div class="box-texto-obra">
+                <h4>1959</h4>
                 <h5>Premio/Primer lugar</h5>
-                <p>Premio Leopoldo Alas por su colección de cuentos Los jefes (España)</p>
+                <h6>Premio Leopoldo Alas por su colección de cuentos Los jefes (España)</h6>
             </div>
         </div>
 
@@ -201,102 +203,159 @@
         <h4 id="decada-2">
             1960 - 1970
         </h4>
-        <h5 class="year">
-            1962
-        </h5>
-        <div class="box-item-timeline opacity">
-            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
-            <div class="box-texto-obra">
-                <h5>Cuento/Relato</h5>
-                <h6>Los jefes</h6>
-            </div>
-        </div>
-        <div class="box-item-timeline item-derecha">
-            <div class="box-texto-obra">
-                <h5>Premio/Primer lugar</h5>
-                <p>Premio Biblioteca Breve, de Seix Barral, por su primera novela La ciudad y los perros (España)</p>
-            </div>
+
+        <div class="box-titulo-secciones">
+            <h6>Obra literaria</h6>
+            <h6>Premios y reconocimientos</h6>
         </div>
 
-        <div class="clear"></div>
-
-        <h5 class="year">
-            1963
-        </h5>
-        <div class="box-item-timeline">
-            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
-            <div class="box-texto-obra">
-                <h5>Novela</h5>
-                <h6>La Ciudad y los Perros</h6>
-            </div>
-        </div>
-        <div class="box-item-timeline item-derecha">
-            <div class="box-texto-obra">
-                <h5>Premio/Primer lugar</h5>
-                <p>Premio de la Crítica de España por La ciudad y los perros</p>
-            </div>
-            <div class="box-texto-obra">
-                <h5>Segundo lugar</h5>
-                <p>Segundo puesto del Premio Formentor por La ciudad y los perros (España)</p>
-            </div>
-        </div>
-
-        <div class="clear"></div>
-
-        <h5 class="year">
-            1966
-        </h5>
-        <div class="box-item-timeline">
-            <div class="box-obra-timeline">
-                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+        <div class="box-columna-izq">
+            <div class="box-item-timeline  margin-top-159">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
                 <div class="box-texto-obra">
+                    <h4>1963</h4>
                     <h5>Novela</h5>
-                    <h6>La Casa Verde</h6>
+                    <h6>La Ciudad y los Perros</h6>
                 </div>
-            </div>       
-            <div class="box-obra-timeline">
-                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+            </div>
+            <div class="box-item-timeline">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
                 <div class="box-texto-obra">
+                    <h4>1966</h4>
+                    <h5>Novela</h5>
+                    <h6 style="margin-bottom: 30px;">La Casa Verde</h6>
+
                     <h5>Obra teatral</h5>
                     <h6>Conversación en la Catedral</h6>
                 </div>
-            </div>            
+            </div>
+            <div class="box-item-timeline padding-bottom-105">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1967</h4>
+                    <h5>Cuento/ Relato</h5>
+                    <h6>Los Cachorros</h6>
+                </div>
+            </div>
         </div>
-        <div class="box-item-timeline item-derecha margin-top-150">
+
+        <div class="box-columna-der">
             <div class="box-texto-obra">
+                <h4>1962</h4>
                 <h5>Premio/Primer lugar</h5>
-                <p>Premio de la Crítica de España por su segunda novela La casa verde</p>
+                <h6>Premio Biblioteca Breve, de Seix Barral, por su primera novela La ciudad y los perros (España)</h6>
+            </div>
+
+            <div class="box-texto-obra">
+                <h4>1963</h4>
+                <h5>Premio/Primer lugar</h5>
+                <h6 style="margin-bottom: 30px;">Premio de la Crítica de España por La ciudad y los perros</h6>
+
+                <h5>Segundo lugar</h5>
+                <h6>Segundo puesto del Premio Formentor por La ciudad y los perros (España)</h6>
+            </div>
+
+            <div class="box-texto-obra">
+                <h4>1966</h4>
+                <h5>Premio/Primer lugar</h5>
+                <h6>Premio de la Crítica de España por su segunda novela La casa verde</h6>
+            </div>
+
+            <div class="box-texto-obra margin-top-171">
+                <h4>1967</h4>
+                <h5>Premio/Primer lugar</h5>
+                <h6 style="margin-bottom: 30px;">Premio Nacional de Novela (Perú), por La casa verde</h6>
+
+                <h5>Premio/Primer lugar</h5>
+                <h6>Premio Rómulo Gallegos (Venezuela), por La casa verde</h6>
             </div>
         </div>
 
         <div class="clear"></div>
-        <h5 class="year">
-            1967
-        </h5>
-        <div class="box-item-timeline">
-            <div class="box-obra-timeline">
-                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
-                <div class="box-texto-obra">
-                    <h5>Cuento/ Relato</h5>
-                    <h6>Los Cachorros</h6>
-                </div>
-            </div>                 
-        </div>
-        <div class="box-item-timeline item-derecha">
-            <div class="box-texto-obra">
-                <h5>Premio/Primer lugar</h5>
-                <p>Premio Nacional de Novela (Perú), por La casa verde</p>
-            </div>
-            <div class="box-texto-obra">
-                <h5>Premio/Primer lugar</h5>
-                <p>Premio Rómulo Gallegos (Venezuela), por La casa verde</p>
-            </div>
-        </div>
-
-        <div class="clear"></div>   
+         
         <h4 id="decada-3">
             1970 - 1980
         </h4>
+
+        <div class="box-titulo-secciones">
+            <h6>Obra literaria</h6>
+            <h6>Premios y reconocimientos</h6>
+        </div>
+
+        <div class="box-columna-izq">
+            <div class="box-item-timeline">
+                <div class="box-portada-obra opacity">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1971</h4>
+                    <h5>Ensayo</h5>
+                    <h6>García Márquez: Historia de un deicidio</h6>
+                </div>
+            </div>
+            <div class="box-item-timeline">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1973</h4>
+                    <h5>Novela</h5>
+                    <h6>Pantaleón y las Visitadoras</h6>
+                </div>
+            </div>
+            <div class="box-item-timeline">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1975</h4>
+                    <h5>Ensayo</h5>
+                    <h6>La Orgía Perpetua; Flaubert y Madame Bovary</h6>
+                </div>
+            </div>
+            <div class="box-item-timeline padding-bottom-105">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                </div>                
+                <div class="box-texto-obra">
+                    <h4>1977</h4>
+                    <h5>Novela</h5>
+                    <h6>La Tía Julia y el Escribidor</h6>
+                </div>
+            </div>
+        </div>
+
+        <div class="box-columna-der">
+            <div class="box-texto-obra padding-top-620">
+                <h4>1976</h4>
+                <h5>Distinción/Membresía</h5>
+                <h6 style="margin-bottom: 30px;">Título de Miembro Honorario de la Universidad Hebrea de Jerusalén (Israel)</h6>
+
+                <h5>Distinción/Membresía</h5>
+                <h6>Presidente del PEN Club Internacional, cargo que desempeñaría hasta 1979 (Reino Unido)</h6>
+            </div>
+
+            <div class="box-texto-obra">
+                <h4>1977</h4>
+                <h5>Premio/Primer lugar</h5>
+                <h6 style="margin-bottom: 30px;">Premio Derechos Humanos 1977, otorgado por la Asociación Judío latinoamericana</h6>
+
+                <h5>Segundo lugar</h5>
+                <h6>Medalla de Plata y Diploma de Honor del Concejo Provincial de Lima</h6>
+            </div>
+
+            <div class="box-texto-obra">
+                <h4>1979</h4>
+                <h5>Premio/Primer lugar</h5>
+                <h6>Premio de periodismo Ramón Godó Lallana, otorgado por el diario catalán La Vanguardia (Barcelona, España)</h6>
+            </div>
+        </div>
 
         <h5 class="year">
             1971
