--- a/menu/index.html
+++ b/menu/index.html
@@ -107,15 +107,13 @@
         const mediaItems = [
             // Ya no incluimos la imagen central en este array
             { url: '../videos/video-vargas-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-2/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-3/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page6', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page7', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page8', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page9', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page10', title: '', type: 'video' }
+            { url: '../videos/video-vargas-3.mp4', link: '../capitulo-2/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-4.mp4', link: '../capitulo-3/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-5.mp4', link: '../capitulo-4/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-6.mp4', link: '../capitulo-5/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-7.mp4', link: '../capitulo-6/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-7/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-9.mp4', link: '../capitulo-8/index.html', title: '', type: 'video' }
         ];        
 
         // Cargar la textura de fondo
