--- a/capitulo-7/index.html
+++ b/capitulo-7/index.html
@@ -46,12 +46,25 @@
         </video>  
     </div>    
 
+    <div class="box-main-autor">
+        <span class="separador-autor"></span>
+        <div class="box-autor">
+            <img src="../img/bg-autor.png" alt="" width="100%">
+            <div class="info-autor">
+                <h5>Enrique Planas</h5>
+                <h6>Editor de El Dominical</h6>
+            </div>
+        </div>
+        <span class="separador-autor"></span>
+    </div>
+
     <div class="box-bajada-nobel">
         <span class="separador-amigo"></span>
-        <img src="../img/bg-bajada-nobel.png" alt="" width="100%">
+        <img src="../img/comillas.png" alt="" width="100%">
         <h3>
             “Pero creo que la idea general que existe es que si alguien recibe el Premio Nobel de Literatura, de alguna manera su carrera literaria ha terminado, y entonces, si uno está vivo todavía, se siente muy desmoralizado y trata de demostrar que eso no es verdad, que existe una vida literaria después del Premio Nobel, que uno puede seguir escribiendo y publicando; es decir, que está vivo todavía. Bueno, yo creo haberlo demostrado, ojalá no me equivoque. Es verdad, he publicado bastantes libros después y en general me siento vivo, no me siento un cadáver después del Premio Nobel”.
         </h3>
+        <h5>Mario Vargas Llosa</h5>
         <span class="separador-amigo"></span>
     </div> 
 
