--- a/capitulo-6/index.html
+++ b/capitulo-6/index.html
@@ -41,6 +41,18 @@
         <h3>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT, SED DO EIUSMOD TEMPOR INCIDIDUNT.</h3>
     </div>
 
+    <div class="box-main-autor">
+        <span class="separador-autor"></span>
+        <div class="box-autor">
+            <img src="../img/bg-autor.png" alt="" width="100%">
+            <div class="info-autor">
+                <h5>Enrique Planas</h5>
+                <h6>Editor de El Dominical</h6>
+            </div>
+        </div>
+        <span class="separador-autor"></span>
+    </div>
+
     <h4 class="amigos">
         amigos
     </h4>
