--- a/capitulo-5/index.html
+++ b/capitulo-5/index.html
@@ -47,6 +47,18 @@
         </p>
     </div>
 
+    <div class="box-main-autor">
+        <span class="separador-autor"></span>
+        <div class="box-autor">
+            <img src="../img/bg-autor.png" alt="" width="100%">
+            <div class="info-autor">
+                <h5>Victor Reyes</h5>
+                <h6>Redactor de Política</h6>
+            </div>
+        </div>
+        <span class="separador-autor"></span>
+    </div>
+
     <div class="box-main-textos-largos">
         <p>
             Desde su génesis, la poiesis de Mario Vargas Llosa, su proyecto narrativo, abordó las políticas del poder. En particular, las del Perú de mediados del siglo XX, donde están ambientados sus primeros cuentos y novelas. De hecho, cuando ganó el Nobel de Literatura, lo hizo por “su cartografía de las estructuras de poder y su mordaz retrato de la resistencia individual, la sublevación y la derrota". En correlato, su biografía evidencia una larga y mutante relación con la herramienta con la que se ejerce el poder: la política, propiamente dicha.
