--- a/capitulo-2/index.html
+++ b/capitulo-2/index.html
@@ -47,6 +47,18 @@
         </p>
     </div>
 
+    <div class="box-main-autor">
+        <span class="separador-autor"></span>
+        <div class="box-autor">
+            <img src="../img/bg-autor.png" alt="" width="100%">
+            <div class="info-autor">
+                <h5>Enrique Planas</h5>
+                <h6>Editor de El Dominical</h6>
+            </div>
+        </div>
+        <span class="separador-autor"></span>
+    </div>
+
     <div class="box-obra">
         <div class="box-portada">
             <h4>Tiempos <br> recios</h4>
