--- a/capitulo-3/index.html
+++ b/capitulo-3/index.html
@@ -47,6 +47,17 @@
         </p>
     </div>
 
+    <div class="box-main-autor">
+        <span class="separador-autor"></span>
+        <div class="box-autor">            
+            <div class="info-autor" style="text-align: center;">
+                <h6>Material fotográfico del</h6>
+                <h5>Archivo histórico de El Comercio</h5>                
+            </div>
+        </div>
+        <span class="separador-autor"></span>
+    </div>
+
     <div class="box-main-galeria">
         <div class="box-foto" id="foto-1">
             <img src="../img/bg-galeria-1.jpg" alt="" width="100%">
