--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -47,6 +47,18 @@
         </p>
     </div>
 
+    <div class="box-main-autor">
+        <span class="separador-autor"></span>
+        <div class="box-autor">
+            <img src="../img/bg-autor.png" alt="" width="100%">
+            <div class="info-autor">
+                <h5>Alfonso Rivadeneyra</h5>
+                <h6>Redactor de Luces</h6>
+            </div>
+        </div>
+        <span class="separador-autor"></span>
+    </div>
+
    <div class="box-main-personajes">
 
         <div class="box-personaje" id="personaje-1">
