--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -35,16 +35,56 @@
         </div>
     </nav>
 
-    <div class="header-interior">
+    <div class="header-interior header-interior-capitulo-1">
         <h5>Capítulo 1</h5>
-        <h1>chatbot</h1>
-        <p class="interior-capitular">
-            Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborisaliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        </p>  
-        <span class="separador"></span>      
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <img src="../img/icon-pdt.png" alt="" width="100%">
+        <h1>chatbot pdt</h1>
+        <h3>LOREM IPSUM DOLOR SIT AMET</h3>
+    </div>
+
+    <div class="box-main-pdt">
+        <div class="bg-pdt-1"></div>
+
+        <div class="box-main-autor">
+            <span class="separador-autor"></span>
+            <div class="box-autor">
+                <img src="../img/bg-autor.png" alt="" width="100%">
+                <div class="info-autor">
+                    <h5>Víctor Aguilar</h5>
+                    <h6>Ilustraciones</h6>
+                </div>
+            </div>
+            <span class="separador-autor"></span>
+        </div>
+
+        <h4>¿Quieres descubrir piedra de toque como nunca antes?</h4>
+
+        <p class="bajada-pdt">
+            Hemos creado un asistente virtual único, entrenado con todas las columnas Piedra de Toque de Mario Vargas Llosa publicadas en El Comercio entre 1991 y 2023. Un corpus de 261 artículos, ahora a tu alcance con ayuda de la inteligencia artificial.
         </p>
+        <p class="bajada-pdt">
+            Una herramienta pionera que combina procesamiento de lenguaje natural (NLP) y una base de datos estructurada para responder con exactitud sobre temas, personajes y cifras mencionadas en las columnas.
+        </p>
+        <p class="bajada-pdt">
+            Una experiencia conversacional sin precedentes Este chatbot es más que un buscador: es tu puerta de entrada al pensamiento de MVLL en diferentes periodos de la historia peruana. Explora sus análisis con una visión única y perspicaz.
+        </p>
+
+        <div class="main-chat">
+            <div class="header-chat">
+                <img src="../img/bg-header-chat.png" alt="" width="100%">
+                <div class="box-indicaciones-chat">
+                    <p>¿Qué puedes hacer?</p>
+                    <p>-Consulta análisis políticos, literarios y culturales. </p>
+                    <p>-Descubre citas, datos y referencias de cada columna. </p>
+                    <p>-Pregunta sobre personajes, eventos y temas clave.</p>
+                </div>
+            </div>
+            <div class="body-chat">
+                <p>Pregunta lo que quieras sobre Piedra de Toque y deja que la IA te acompañe en este camino de conocimiento. <b>¡Prueba ahora!</b></p>
+                <iframe src="https://bri226-chatbot-mvll-streamlit-app-0fft04.streamlit.app//?embed=true" height="450" width="100%"></iframe>
+            </div>
+        </div>
+
     </div>
 
     <div class="box-footer">
