--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -85,6 +85,10 @@
             </div>
         </div>
 
+        <p class="link-columnas">
+            <a href="#" target="_blank">Aquí</a> algunas de las columnas de <span>Piedra de Toque</span>
+        </p>
+
     </div>
 
     <div class="box-footer">
